# sauna-project

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
data/google_trends/base_data/: multiTimeline.csv
docs/: サウナ開発_分析.pptx
work/: test.ipynb
