[tool.poetry]
name = "project01"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tqdm = "^4.66.2"
numpy = "^1.26.4"
pandas = "^2.2.1"
seaborn = "^0.13.2"
ipykernel = "^6.29.3"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
selenium = "^4.20.0"
webdriver-manager = "^4.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
